# advent-of-code-2020

./: CMakeLists.txt  README.md  build.sh  format.sh  outputs.txt  run.sh
data/: outputs.txt
src/: bootcode.h  day01a.cpp  day01b.cpp  day02a.cpp  day02b.cpp  day03a.cpp  day03b.cpp  day04a.cpp  day04b.cpp  day05a.cpp  day05b.cpp  day06a.cpp  day06b.cpp  day07a.cpp  day07b.cpp  day08a.cpp  day08b.cpp  day09a.cpp  day09b.cpp  day10a.cpp  day10b.cpp  day11a.cpp  day11b.cpp  day12a.cpp  day12b.cpp  day13a.cpp  day13b.cpp  day14a.cpp  day14b.cpp  day15a.cpp  day15b.cpp  day16a.cpp  day16b.cpp  day17a.cpp  day17b.cpp  day18a.cpp  day18b.cpp  day19a.cpp  day19b.cpp  day1a.cpp  (+18 more)
