cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 17)

project(AdventOfCode2020)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_executable(day01a src/day1a.cpp)
add_executable(day01b src/day1b.cpp)
add_executable(day02a src/day2a.cpp)
add_executable(day02b src/day2b.cpp)
add_executable(day03a src/day3a.cpp)
add_executable(day03b src/day3b.cpp)
add_executable(day04a src/day4a.cpp)
add_executable(day04b src/day4b.cpp)
add_executable(day05a src/day5a.cpp)
add_executable(day05b src/day5b.cpp)
add_executable(day06a src/day6a.cpp)
add_executable(day06b src/day6b.cpp)
add_executable(day07a src/day7a.cpp)
add_executable(day07b src/day7b.cpp)
add_executable(day08a src/day8a.cpp)
add_executable(day08b src/day8b.cpp)
add_executable(day09a src/day9a.cpp)
add_executable(day09b src/day9b.cpp)
add_executable(day10a src/day10a.cpp)
add_executable(day10b src/day10b.cpp)


