cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 17)

project(AdventOfCode2020)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_executable(day01a src/day01a.cpp)
add_executable(day01b src/day01b.cpp)
add_executable(day02a src/day02a.cpp)
add_executable(day02b src/day02b.cpp)
add_executable(day03a src/day03a.cpp)
add_executable(day03b src/day03b.cpp)
add_executable(day04a src/day04a.cpp)
add_executable(day04b src/day04b.cpp)
add_executable(day05a src/day05a.cpp)
add_executable(day05b src/day05b.cpp)
add_executable(day06a src/day06a.cpp)
add_executable(day06b src/day06b.cpp)
add_executable(day07a src/day07a.cpp)
add_executable(day07b src/day07b.cpp)
add_executable(day08a src/day08a.cpp)
add_executable(day08b src/day08b.cpp)
add_executable(day09a src/day09a.cpp)
add_executable(day09b src/day09b.cpp)
add_executable(day10a src/day10a.cpp)
add_executable(day10b src/day10b.cpp)
add_executable(day11a src/day11a.cpp)
add_executable(day11b src/day11b.cpp)
add_executable(day12a src/day12a.cpp)
add_executable(day12b src/day12b.cpp)


